# OpenEnv-Meta-Hackathon---Adversarial-Resume-Screening-Environment

./: Dockerfile  PRE_SUBMISSION_AUDIT_REPORT.md  README.md  blog.md  client.py  inference.py  inference_fleet.py  mailmap.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_e2e_local.py  test_simple.py  train_grpo.py  train_grpo_fleet.ipynb  validation_results.md
assets/: eval_results.json
data/: resumes.json
grpo_fleet_output/final/: README.md
grpo_results/grpo_fleet_output/final/: adapter_model.safetensors
grpo_results/grpo_fleet_output/final/ref/: adapter_model.safetensors
server/: app.py  environment.py  fleet_app.py  fleet_environment.py  overseer_env.py  specialist_env.py
